# gloam-engine

./: Cargo.toml  README.md  build.sh  build2.sh  index.js  package-lock.json  package.json  post_build.rs  webpack.config.js
js/: mq_js_bundle.js
src/: collisions.rs  draw.rs  events.rs  game.rs  lib.rs  scene.rs  scene2.rs  sprite.rs
web/: index.html  mq_js_bundle.js  package-lock.json  package.json
web/src/: GameObject.ts  Texture.ts  main.ts  snake.ts  space.ts  tests.ts
web/src/gloam/: AnimatedSpriteController.ts  GameObject.ts  SpriteSheet.ts  Timer.ts  Util.ts
