[package]
name = "gloam-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
macroquad = "0.3"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.59"

[dependencies.web-sys]
version = "0.3.61"

features = [
    'console',
    'Request',
    'Response',
    #    'Document',
    #    'Element',
    #    'HtmlCanvasElement',
    #    'HtmlImageElement',
    #    'Performance',
    #    'WebGlFramebuffer',
    #    'WebGl2RenderingContext',
    #    'WebGlUniformLocation',
    #    'WebGlBuffer',
    #    'WebGlProgram',
    #    'WebGlShader',
    #    'WebGlVertexArrayObject',
    #    'WebGlTexture',
    'ReadableStream',
    'Window',
]
[package.metadata.cargo-post.dependencies]
wasm-bindgen-cli-support = "0.2.87"
